Selecting 2 numerical and 1 character variable in section 5

--- a/Assessment_1.Rmd
+++ b/Assessment_1.Rmd
@@ -77,6 +77,14 @@ str(LifeExp_data[1:2, ])
 
 ### Section 5: Data Summary
 
+```{r}
+gdp_life_exp_data <- LifeExp_data %>% 
+  select(
+    Country, 
+    Life_expectancy, 
+    GDP_per_capita
+  )
+```
 
 
 
