Selecting populatin and life exp as num variables in section 5

--- a/Assessment_1.Rmd
+++ b/Assessment_1.Rmd
@@ -77,6 +77,14 @@ str(LifeExp_data[1:2, ])
 
 ### Section 5: Data Summary
 
+```{r}
+Population_life_exp_data <- LifeExp_data %>% 
+  select(
+    Population, 
+    Life_expectancy, 
+    Country
+  )
+```
 
 
 
