Summary table of GDP & life expectancy by country

--- a/Assessment_1.Rmd
+++ b/Assessment_1.Rmd
@@ -84,6 +84,14 @@ gdp_life_exp_data <- LifeExp_data %>%
     Life_expectancy, 
     GDP_per_capita
   )
+
+summary_table <- gdp_life_exp_data %>% 
+  group_by(Country) %>% 
+  summarise(mean_GDP_per_capita = mean((GDP_per_capita), na.rm = TRUE),
+            mean_life_exp = mean((Life_expectancy), na.rm = TRUE), 
+            variance_GDP = var((GDP_per_capita), na.rm = TRUE), 
+            median_life_exp = median((Life_expectancy), na.rm = TRUE)) %>% 
+  head(10)
 ```
 
 
