--- a/Assessment_1.Rmd
+++ b/Assessment_1.Rmd
@@ -90,7 +90,8 @@ summary_table <- Population_life_exp_data %>%
   summarise(mean_pop = mean((Population), na.rm = TRUE),
             mean_life_exp = mean((Life_expectancy), na.rm = TRUE),
             max_populatin = max((Population), na.rm = TRUE),
-            max_lifeExp = max((Life_expectancy), na.rm = TRUE))
+            max_lifeExp = max((Life_expectancy), na.rm = TRUE)) %>% 
+  head(10)
 
 kable(summary_table, caption = "Mean of population and Life expectancy by country")
 
