updating section 5 from data-summary branch

--- a/Assessment_1.Rmd
+++ b/Assessment_1.Rmd
@@ -77,7 +77,25 @@ str(LifeExp_data[1:2, ])
 
 ### Section 5: Data Summary
 
+```{r}
+gdp_life_exp_data <- LifeExp_data %>% 
+  select(
+    Country, 
+    Life_expectancy, 
+    GDP_per_capita
+  )
 
+summary_table <- gdp_life_exp_data %>% 
+  group_by(Country) %>% 
+  summarise(mean_GDP_per_capita = mean((GDP_per_capita), na.rm = TRUE),
+            mean_life_exp = mean((Life_expectancy), na.rm = TRUE), 
+            variance_GDP = var((GDP_per_capita), na.rm = TRUE), 
+            median_life_exp = median((Life_expectancy), na.rm = TRUE)) %>% 
+  arrange(mean_GDP_per_capita) %>% 
+  head(10)
+
+kable(summary_table, caption = "Summary table statistics of GDP per capita and Life expectancy by country")
+```
 
 
 
