--- a/Assessment_1.Rmd
+++ b/Assessment_1.Rmd
@@ -106,10 +106,12 @@ figure_1 <- ggplot(gdp_life_exp_data, aes(x = GDP_per_capita, y = Life_expectanc
   labs(title = "Correlation between GDP per capita and life expectancy", 
        x = "GDP per capita", 
        y = "Life Expectancy",
-       caption = "Figure 1: A scatter plot showing relationship between GDP per capita and life expectancy")
+       caption = "Figure 1: A scatter plot showing relationship between GDP per capita and life expectancy") + 
+  theme(plot.caption = element_text(size = 10, face = "italic", hjust = 0.5))
 
 figure_1
 ```
 
-
+* *_AS GDP Per capita increases, life expectancy also seems to increase, especially between 0 and 60000 GDP per capita_*
+* *_Life expectancy seems to plateau at approximately 80 years old and 60000 GDP per capita_* 
 
