--- a/Assessment_1.Rmd
+++ b/Assessment_1.Rmd
@@ -18,7 +18,35 @@ library(ggplot2)
 
 # Read in dataset 
 LifeExp_data <- read.csv("data/life-expectancy-un-vs-gdp-per-capita-wb.csv")
+```
 
+
+### Section 2: Research Question 
+
+This report will explore the relationship between GDP per capita, a key indicator of a country's wealth, and its correlation with life expectancy and population across multiple countries from 2005 to 2020. The analysis aims to determine whether GDP directly influences both life expectancy and population size during this period.
+
+
+### Section 3: Data Set Introduction
+
+The data used in this report (available [here](https://ourworldindata.org/life-expectancy)) is sourced from the _Life Expectancy vs. GDP per Capita, 2022_ chart found in the _Population and Demographic Change_ topic on [Our World in Data](https://ourworldindata.org/). It is intended to investigate the relationship between life expectancy and various economic and demographic variables across multiple countries over several decades. A link to the location of the data used in this report is provided. 
+
+The dataset includes thousands of observations across many countries around the wold and through multiple decades. The variables in the dataset provide insights into the economic and demographic factors that influence life expectancy globally.
+
+```{r variables}
+
+# Retrieve the variable names from LifeExp_data
+variable_names <- colnames(LifeExp_data)
+
+variable_names_table <- data.frame(variable_names)
+
+
+kable(variable_names_table, caption = "Table of column names")
+```
+
+
+### Section 4: Data Set Description 
+
+```{r data wrangling, eval = TRUE, echo = TRUE}
 # Data cleanup and wrangling to ensure data fits correct specifications for assessment 1
 LifeExp_data <- LifeExp_data %>%
   # rename columns to simplify
@@ -40,33 +68,9 @@ glimpse(LifeExp_data)
 ```
 
 
-### Section 2: Research Question 
+The data set has undergone data wrangling and cleanup to ensure that it fits within the desired assessment specifications. The main transformations include selecting only the 5 columns/variables (**Country**, **Year**, **GDP per Capita**, **Life Expectancy**, and **Population**), removing missing values and filtering the Years variables for years 2005, 2010, 2015 & 2020. 
 
-This report will explore the relationship between GDP per capita, a key indicator of a country's wealth, and its correlation with life expectancy and population across multiple countries from 2005 to 2020. The analysis aims to determine whether GDP directly influences both life expectancy and population size during this period.
-
-
-### Section 3: Data Set Introduction
-
-The data used in this report (available [here](https://ourworldindata.org/life-expectancy)) is sourced from the _Life Expectancy vs. GDP per Capita, 2022_ chart found in the _Population and Demographic Change_ topic on [Our World in Data](https://ourworldindata.org/). It is intended to investigate the relationship between life expectancy and various economic and demographic variables across multiple countries over several decades. A link to the location of the data used in this report is provided. 
-
-The dataset includes variables such as **Country**, **Year**, **GDP per Capita**, **Life Expectancy**, and **Population**, with thousands of observations across many countries and years. These variables provide insights into the economic and demographic factors that influence life expectancy globally.
-
-```{r variables}
-
-# Retrieve the variable names from LifeExp_data
-variable_names <- colnames(LifeExp_data)
-
-variable_names_table <- data.frame(variable_names)
-
-
-kable(variable_names_table, caption = "Table of column names")
-```
-
-
-### Section 4: Data Set Description 
-
-
-The data set has undergone data wrangling and cleanup to ensure that it fits within the desired assessment specifications. The main transformations include selecting only the 5 columns/variables (**Country**, **Year**, **GDP per Capita**, **Life Expectancy**, and **Population**), removing missing values and filtering the Years variables for years 2005, 2010, 2015 & 2020. Following these transformations, the dataset is ready for analysis and contains `r nrow(LifeExp_data)` observatinos and `r ncol(LifeExp_data)` variables. 
+Following these transformations, the dataset is ready for analysis and contains `r nrow(LifeExp_data)` observatinos and `r ncol(LifeExp_data)` variables. 
 
 ```{r figure 1, fig.align= "center", fig.cap="Screenshot of Code", out.height= "70%", out.width= "70%"}
 knitr::include_graphics("Image/Screenshot_code.PNG")
@@ -98,7 +102,7 @@ summary_table <- gdp_life_exp_data %>%
 kable(summary_table, caption = "Summary table statistics of GDP per capita and Life expectancy by country")
 ```
 
-The summary table above shows a general trend where GDP per capita tends to **increase** with average life expectancy. However, this pattern is not always true, as some countries with lower GDP per capita exhibit higher life expectancy than those with higher GDP per capita— one example of this woudl be Central African Republic. 
+The summary table above shows a general trend where GDP per capita tends to **increase** with average life expectancy. However, this pattern is not always true, as some countries with lower GDP per capita exhibit higher life expectancy than those with higher GDP per capita— one example of this would be Democratic Republic of Congo. 
 
 
 ```{r table 2, eval = TRUE, echo = TRUE, warning = FALSE, message= FALSE}
@@ -173,8 +177,4 @@ figure_2
 
 ### Section 7: Conclusions
 
-This report examined the relationship between life expectancy, GDP per capita, and population using publicly available data from Our World in Data. By sorting the data by GDP per capita, we observe a clear trend: countries with lower GDP per capita generally have lower life expectancy. The Central African Republic is a notable example, with a low average GDP per capita of 939.76 and a life expectancy of 49.4 years.
-
-The scatter plot further highlights that countries with GDP per capita below \$30,000 tend to have lower life expectancy, while this relationship plateaus for countries with GDP per capita above \$60,000. These findings suggest that while GDP per capita is a good predictor of life expectancy, other factors are likely involved.
-
-In conclusion, additional data and analysis are needed to refine our understanding and improve predictions of life expectancy.
+This report examined the relationship between life expectancy, GDP per capita, and population. Sorting by GDP per capita reveals a general trend: countries with lower GDP per capita tend to have lower life expectancy. However, this is not always the case, as seen in the Democratic Republic of Congo, which has a higher life expectancy than some wealthier countries. Figure 1 shows that countries with GDP below $30,000 generally have lower life expectancy, while this trend plateaus for countries above $60,000. These findings suggest that while GDP is a strong predictor of life expectancy, other factors likely play a significant role. Figure 2 shows a loose correlation between GDP per capita and population, with lower GDP countries typically having higher populations. In conclusion, while GDP per capita is a strong predictor of life expectancy and population, further analysis is needed to refine our understanding and improve predictions beyond GDP alone.
